# body-recorder

./: AGENTS.md  Cargo.toml
.github/workflows/: build.yml
openspec/changes/archive/2026-05-17-add-trend-based-diet-advice/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-17-optimize-codebase-architecture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-19-add-ratatui-terminal-interface/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-19-enhance-tui-analysis-views/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-19-improve-tui-color-readability/: design.md  proposal.md  tasks.md
openspec/specs/body-mass-index-display/: spec.md
openspec/specs/fat-loss-nutrition-targets/: spec.md
openspec/specs/historical-weight-comparison/: spec.md
openspec/specs/maintainable-application-architecture/: spec.md
openspec/specs/ratatui-terminal-interface/: spec.md
openspec/specs/tdee-estimate/: spec.md
openspec/specs/trend-based-diet-advice/: spec.md
src/: cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  output.rs  repository.rs  schema.rs  stats.rs  supabase.rs  use_cases.rs  validation.rs
src/app/: use_cases.rs
src/domain/: goals.rs  mod.rs  models.rs  schema.rs  stats.rs
src/presentation/cli/: args.rs  commands.rs  mod.rs  output.rs
src/presentation/tui/: action.rs  app.rs  event.rs  mod.rs  terminal.rs  ui.rs
src/storage/: config.rs  mod.rs  repository.rs  supabase.rs
src/tui/: action.rs  app.rs  event.rs  mod.rs  ui.rs
(+40 files in other folders)
