[package]
name = "body-recorder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "br"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
ansi_term = "0.12.1"
async-trait = "0.1.89"
futures = "0.3.32"
dirs = "6.0.0"
lazy_static = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
url = "2.5.8"
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
crossterm = "0.29.0"
